--- a/src/template.html
+++ b/src/template.html
@@ -56,7 +56,7 @@
       Your browser does not support the audio element.
     </audio>
     <audio class="hbd-aud">
-      <source src="./resources/sfx/hbd.mp3" type="audio/mpeg" />
+      <source src="./resources/sfx/audio1.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
     <audio class="switch-aud">
